[gd_scene load_steps=5 format=3 uid="uid://cxusqo0ha6e0"]

[ext_resource type="Script" path="res://scripts/rumble_area.gd" id="1_0rsnd"]
[ext_resource type="PackedScene" uid="uid://fmrdsxy6ig5r" path="res://vfx/upgrade_particles.tscn" id="2_j0072"]
[ext_resource type="AudioStream" uid="uid://dp8exw6jln24j" path="res://sfx/exp_ball.wav" id="3_ew78u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_23d85"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_0rsnd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(2.18695, 2.18695)
shape = SubResource("CircleShape2D_23d85")

[node name="GPUParticles2D" parent="." instance=ExtResource("2_j0072")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ew78u")
volume_db = 10.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
